{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 34,
  "lineage": "d7f769ca-6410-2d05-136b-91a6f60fa4d8",
  "resources": [
    {
      "module": "module.ec2_instances[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c5204531f799e0c6",
            "arn": "arn:aws:ec2:us-west-2:135957436806:instance/i-036f298a9b529280f",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-036f298a9b529280f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d08f9f7ff5f885f9",
            "private_dns": "ip-10-0-101-185.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.185",
            "public_dns": "ec2-54-203-2-65.us-west-2.compute.amazonaws.com",
            "public_ip": "54.203.2.65",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02e6d2d8ef4566808",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046017aa025b48fc8",
            "tags": {
              "Environment": "dev",
              "Name": "implicitly-grossly-enjoyed-gazelle-0",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "implicitly-grossly-enjoyed-gazelle-0",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "implicitly-grossly-enjoyed-gazelle-0"
            },
            "vpc_security_group_ids": [
              "sg-0ee6690f433f4be09"
            ]
          },
          "dependencies": [
            "module.ec2_instances.aws_iam_instance_profile.this",
            "module.ec2_instances.aws_iam_role.this",
            "module.ec2_instances.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instances.data.aws_partition.current",
            "module.ec2_instances.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.instance",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c5204531f799e0c6",
            "arn": "arn:aws:ec2:us-west-2:135957436806:instance/i-0a3bfc8f9aa963b26",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a3bfc8f9aa963b26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c48722ac696823af",
            "private_dns": "ip-10-0-101-97.us-west-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.97",
            "public_dns": "ec2-35-92-104-125.us-west-2.compute.amazonaws.com",
            "public_ip": "35.92.104.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0003c2b974f64e209",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-046017aa025b48fc8",
            "tags": {
              "Environment": "dev",
              "Name": "implicitly-grossly-enjoyed-gazelle-1",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "implicitly-grossly-enjoyed-gazelle-1",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "implicitly-grossly-enjoyed-gazelle-1"
            },
            "vpc_security_group_ids": [
              "sg-0ee6690f433f4be09"
            ]
          },
          "dependencies": [
            "module.ec2_instances.aws_iam_instance_profile.this",
            "module.ec2_instances.aws_iam_role.this",
            "module.ec2_instances.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instances.data.aws_partition.current",
            "module.ec2_instances.data.aws_ssm_parameter.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_pet.instance",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:network-acl/acl-0af58b414c10ab7ab",
            "default_network_acl_id": "acl-0af58b414c10ab7ab",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0af58b414c10ab7ab",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "135957436806",
            "subnet_ids": [
              "subnet-046017aa025b48fc8",
              "subnet-05ef9f8632a4237b2",
              "subnet-0753187acb8f1db21",
              "subnet-0d4083fe9ca72d07f"
            ],
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-default",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:route-table/rtb-05b257fad6afea5ee",
            "default_route_table_id": "rtb-05b257fad6afea5ee",
            "id": "rtb-05b257fad6afea5ee",
            "owner_id": "135957436806",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-default",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:security-group/sg-0ee6690f433f4be09",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0ee6690f433f4be09",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "135957436806",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-default",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-default",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6353bc8f67423a8",
            "arn": "arn:aws:ec2:us-west-2:135957436806:elastic-ip/eipalloc-0a6353bc8f67423a8",
            "association_id": "eipassoc-0fdf66115a340a705",
            "domain": "vpc",
            "id": "eipalloc-0a6353bc8f67423a8",
            "network_border_group": "us-west-2",
            "network_interface": "eni-08bbfa4a0a5aca463",
            "private_dns": "ip-10-0-101-127.us-west-2.compute.internal",
            "private_ip": "10.0.101.127",
            "public_dns": "ec2-100-20-210-162.us-west-2.compute.amazonaws.com",
            "public_ip": "100.20.210.162",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-us-west-2a",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef7fd61c240a7135",
            "arn": "arn:aws:ec2:us-west-2:135957436806:elastic-ip/eipalloc-0ef7fd61c240a7135",
            "association_id": "eipassoc-044a3c3ed3f2772fb",
            "domain": "vpc",
            "id": "eipalloc-0ef7fd61c240a7135",
            "network_border_group": "us-west-2",
            "network_interface": "eni-072b9a2574bb5076f",
            "private_dns": "ip-10-0-102-174.us-west-2.compute.internal",
            "private_ip": "10.0.102.174",
            "public_dns": "ec2-44-246-152-130.us-west-2.compute.amazonaws.com",
            "public_ip": "44.246.152.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-us-west-2b",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:internet-gateway/igw-0a211989e026150ce",
            "id": "igw-0a211989e026150ce",
            "owner_id": "135957436806",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a6353bc8f67423a8",
            "association_id": "eipassoc-0fdf66115a340a705",
            "connectivity_type": "public",
            "id": "nat-0fc3340c761b8391f",
            "network_interface_id": "eni-08bbfa4a0a5aca463",
            "private_ip": "10.0.101.127",
            "public_ip": "100.20.210.162",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-046017aa025b48fc8",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-us-west-2a",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ef7fd61c240a7135",
            "association_id": "eipassoc-044a3c3ed3f2772fb",
            "connectivity_type": "public",
            "id": "nat-0886545a158af8037",
            "network_interface_id": "eni-072b9a2574bb5076f",
            "private_ip": "10.0.102.174",
            "public_ip": "44.246.152.130",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05ef9f8632a4237b2",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-us-west-2b",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-021105434d796a3e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0fc3340c761b8391f",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-021105434d796a3e2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f570711b1f45482b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0886545a158af8037",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f570711b1f45482b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a211989e026150ce",
            "id": "r-rtb-01f0f33e39d48078e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01f0f33e39d48078e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:route-table/rtb-021105434d796a3e2",
            "id": "rtb-021105434d796a3e2",
            "owner_id": "135957436806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fc3340c761b8391f",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-private-us-west-2a",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:route-table/rtb-0f570711b1f45482b",
            "id": "rtb-0f570711b1f45482b",
            "owner_id": "135957436806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0886545a158af8037",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-private-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-private-us-west-2b",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:route-table/rtb-01f0f33e39d48078e",
            "id": "rtb-01f0f33e39d48078e",
            "owner_id": "135957436806",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a211989e026150ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-public",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b78eca332956e5f2",
            "route_table_id": "rtb-021105434d796a3e2",
            "subnet_id": "subnet-0753187acb8f1db21"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027770f9ec336e783",
            "route_table_id": "rtb-0f570711b1f45482b",
            "subnet_id": "subnet-0d4083fe9ca72d07f"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015657b8c018e04ec",
            "route_table_id": "rtb-01f0f33e39d48078e",
            "subnet_id": "subnet-046017aa025b48fc8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0111d0056709a2199",
            "route_table_id": "rtb-01f0f33e39d48078e",
            "subnet_id": "subnet-05ef9f8632a4237b2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:subnet/subnet-0753187acb8f1db21",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0753187acb8f1db21",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135957436806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-private-us-west-2a",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:subnet/subnet-0d4083fe9ca72d07f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4083fe9ca72d07f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135957436806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-private-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-private-us-west-2b",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:subnet/subnet-046017aa025b48fc8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046017aa025b48fc8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135957436806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-public-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-public-us-west-2a",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:subnet/subnet-05ef9f8632a4237b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05ef9f8632a4237b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "135957436806",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-public-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C-public-us-west-2b",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            },
            "vpc_id": "vpc-0ac79926a5a186860"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.vpc_name"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:135957436806:vpc/vpc-0ac79926a5a186860",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af58b414c10ab7ab",
            "default_route_table_id": "rtb-05b257fad6afea5ee",
            "default_security_group_id": "sg-0ee6690f433f4be09",
            "dhcp_options_id": "dopt-07eb54a21c62ba254",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac79926a5a186860",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05b257fad6afea5ee",
            "owner_id": "135957436806",
            "tags": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "example-vpc-oW_C",
              "Terraform": "true",
              "hashicorp-learn": "module-use"
            }
          },
          "dependencies": [
            "random_string.vpc_name"
          ]
        }
      ]
    }
  ]
}